--- a/app/app.css
+++ b/app/app.css
@@ -1,3 +1,71 @@
+html, body{
+    
+    height:100%;
+    width:100%;
+ 
+
+}
 body{
-    background-color:darkkhaki;
+       padding:100px 200px;
+       background-color: crimson;
+       box-sizing: border-box;
+}
+#root{
+    background-color:ghostwhite;
+    position:relative;
+    width:100%;
+    min-height:100%;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+}
+#projects-view{
+    display:flex;
+    justify-content: space-around;
+    min-height:100%;
+}
+#project{
+    position:relative;
+    width:300px;
+    height:200px;
+    box-shadow: 0 0 2px rgba(0,0,0,0.9);
+    cursor:pointer;
+    
+}
+#project:hover .showDetails{
+    display:flex;
+}
+#project h2{
+    position:relative;
+    z-index: 3;
+    margin:0;
+    display:none;
+    
+}
+#project img{
+    z-index: 1;
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    -webkit-filter: blur(5px) ;
+    filter: blur(2px) ;
+   
+}
+#project .showDetails{
+    z-index: 3;
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5em;
+    font-weight: 300;
+    background-color:rgba(0,0,0,0.4);
+    color: whitesmoke;
+    cursor:pointer;
+    display: none;
+  
 }
